--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
         <section class="sluzby kancelare">
 
-            <div class="text1">
-
+            <div class="text pravy">
                 <h2>Služby naší cestovní kanceláře</h2>
 
                 <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubytování až po letenky.</p>
@@ -77,12 +76,12 @@
 
         <section class="sluzby delegatu">
 
-            <div class="text2">
+            <div class="text levy">
                 <h2>Služby našich delegátů na místě</h2>
 
                 <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
             </div>
-            
+
             <div class="boxiky spodni">
                 <div class="box palm">
                     <img class="ikona palma" src="Images/palm-icon.svg" alt="palma">
